--- a/edit/saml2int/common_requirements.adoc
+++ b/edit/saml2int/common_requirements.adoc
@@ -126,7 +126,7 @@ Deployments MUST NOT use any of the following security-compromised algorithms wh
 
 * Signature
 ** ```http://www.w3.org/2001/04/xmldsig-more#rsa-md5``` <<RFC4051>>
-** ```http://www.w3.org/2000/09/xmldsig#rsa-sha1``` <XMLSig>>
+** ```http://www.w3.org/2000/09/xmldsig#rsa-sha1``` <<XMLSig>>
 ** ```http://www.w3.org/2001/04/xmldsig-more#ecdsa-sha1``` <<RFC4051>>
 
 * Block Encryption
