--- a/edit/saml2int/common_requirements.adoc
+++ b/edit/saml2int/common_requirements.adoc
@@ -95,7 +95,7 @@ Any logo referenced by an `<mdui:Logo>` element MUST be in PNG format.
 
 === Cryptographic Algorithms
 
-Deployments MUST default to the following algorithms (picking one from each section):
+Deployments MUST support, and use, the following algorithms when communicating with peers in the context of this profile:
 
 * Digest
 ** ```http://www.w3.org/2001/04/xmlenc#sha256``` <<XMLEnc>>
@@ -106,36 +106,15 @@ Deployments MUST default to the following algorithms (picking one from each sect
 
 * Block Encryption
 ** ```http://www.w3.org/2009/xmlenc11#aes128-gcm``` <<XMLEnc>>
+** ```http://www.w3.org/2009/xmlenc11#aes192-gcm``` <<XMLEnc>>
 ** ```http://www.w3.org/2009/xmlenc11#aes256-gcm``` <<XMLEnc>>
 
 * Key Transport
 ** ```http://www.w3.org/2001/04/xmlenc#rsa-oaep-mgf1p``` <<XMLEnc>>
 ** ```http://www.w3.org/2009/xmlenc11#rsa-oaep``` <<XMLEnc>> 
 
-The following default digest algorithm MUST be used in conjunction with the above key transport algorithms (the default mask generation function (MGF1 with SHA1) MUST be used):
+The following default digest algorithm MUST be used in conjunction with the above key transport algorithms (the default mask generation function, MGF1 with SHA1, MUST be used):
 
 * ```http://www.w3.org/2001/04/xmlenc#sha256``` <<XMLEnc>>
 
-Deployments SHOULD select digest, signature, and encryption algorithms on the basis of the Metadata Profile for Algorithm Support `<<SAML2MetaAlgSup>>`. The above requirements provide acceptable defaults in the absence of any information (as is common) or in the event that these defaults are supported by a peer.
-
-Deployments MUST NOT use any of the following security-compromised algorithms when communicating with peers in the context of this profile (even in the presence of the metadata extension indicating a peer supports them):
-
-* Digest
-** ```http://www.w3.org/2000/09/xmldsig#sha1``` <<XMLSig>>
-** ```http://www.w3.org/2001/04/xmldsig-more#md5``` <<RFC4051>>
-
-* Signature
-** ```http://www.w3.org/2001/04/xmldsig-more#rsa-md5``` <<RFC4051>>
-** ```http://www.w3.org/2000/09/xmldsig#rsa-sha1``` <<XMLSig>>
-** ```http://www.w3.org/2001/04/xmldsig-more#ecdsa-sha1``` <<RFC4051>>
-
-* Block Encryption
-** ```http://www.w3.org/2001/04/xmlenc#aes128-cbc``` <<XMLEnc>>
-** ```http://www.w3.org/2001/04/xmlenc#aes194-cbc``` <<XMLEnc>>
-** ```http://www.w3.org/2001/04/xmlenc#aes256-cbc``` <<XMLEnc>>
-** ```http://www.w3.org/2001/04/xmlenc#tripledes-cbc``` <<XMLEnc>>
-
-* Key Transport
-** ```http://www.w3.org/2001/04/xmlenc#rsa-1_5``` <<XMLEnc>>
-
-_This profile cannot preclude the use of these algorithms when communicating with peers outside the scope of this profile, but they are of course not recommended for ongoing use. Note that use of these block encryption algorithms remains widespread at the time of authoring, but they are known to be broken <<XMLEncBreak>>._
+_This profile cannot preclude the use of other algorithms when communicating with peers outside the scope of this profile, but the other algorithms in common use are generally considered to be weakening (e.g., SHA-1) or broken outright (e.g., RSA PKCS#1.5). Note that the use of AES-CBC block encryption algorithms remains widespread at the time of authoring, but are known to be broken <<XMLEncBreak>>._
