--- a/edit/saml2int/references.adoc
+++ b/edit/saml2int/references.adoc
@@ -15,7 +15,7 @@
 - [[[SAML2Err]]] OASIS Approved Errata, SAML Version 2.0 Errata 05, May 2012. http://docs.oasis-open.org/security/saml/v2.0/sstc-saml-approved-errata-2.0.pdf
 - [[[XMLEnc]]] D. Eastlake et al. XML Encryption Syntax and Processing. World Wide Web Consortium Recommendation, April 2013. https://www.w3.org/TR/xmlenc-core1/
 - [[[XMLSig]]] D. Eastlake et al. XML-Signature Syntax and Processing, Version 1.1. World Wide Web Consortium Recommendation, April 2013. https://www.w3.org/TR/xmldsig-core1/
-- [[[SAML2SubjId]]] OASIS Committee Draft, SAMLV2.0 Subject Identifier Attributes Profile Version 1.0, September 2017.  https://www.oasis-open.org/committees/download.php/61575/saml-subject-id-attr-v1.0-wd03.pdf
+- [[[SAML2SubjId]]] OASIS Working Draft, SAMLV2.0 Subject Identifier Attributes Profile Version 1.0, February 2018.  https://www.oasis-open.org/committees/download.php/62438/saml-subject-id-attr-v1.0-wd04.pdf
 - [[[SAML2ASLO]]] OASIS Committee Specification, SAML V2.0 Asynchronous Single Logout Profile Extension Version 1.0, November 2012. http://docs.oasis-open.org/security/saml/Post2.0/saml-async-slo/v1.0/cs01/saml-async-slo-v1.0-cs01.pdf
 - [[[MetaUi]]] OASIS Committee Specification, SAML V2.0 Metadata Extensions for Login and Discovery User Interface Version 1.0, 03 April 2012. http://docs.oasis-open.org/security/saml/Post2.0/sstc-saml-metadata-ui/v1.0/cs01/sstc-saml-metadata-ui-v1.0-cs01.pdf
 - [[[MetaAttr]]] OASIS Committee Specification, SAML V2.0 Metadata Extension for Entity Attributes Version 1.0, August 2009. http://docs.oasis-open.org/security/saml/Post2.0/sstc-metadata-attr-cs-01.pdf
@@ -27,6 +27,5 @@
 - [[[eduPerson]]] eduPerson Object Class Specification. https://www.internet2.edu/products-services/trust-identity/eduperson-eduorg/
 - [[[eduOrg]]] EduOrg Object Class Specification. https://www.internet2.edu/products-services/trust-identity/eduperson-eduorg/
 - [[[IMI]]] OASIS Standard, Identity Metasystem Interoperability Version 1.0, July 2009. http://docs.oasis-open.org/imi/identity/v1.0/identity.html
-- [[[SAML2SPRIP]]] OASIS Committee Specification, Service Provider Request Initiation Protocol and Profile Version 1.0, November 2010. http://docs.oasis-open.org/security/saml/Post2.0/sstc-request-initiation.pdf
 - [[[MACEAttrProf]]] MACEDir Working Group Specification, MACEDir SAML Attribute Profiles, April 2008. http://macedir.org/docs/internet2-mace-dir-saml-attributes-latest.pdf
 - [[[XMLEncBreak]]] Jager and Somorovsky, How to Break XML Encryption, October 2011. http://www.nds.rub.de/media/nds/veroeffentlichungen/2011/10/22/HowToBreakXMLenc.pdf
