--- a/edit/saml2int/sp_requirements.adoc
+++ b/edit/saml2int/sp_requirements.adoc
@@ -90,7 +90,7 @@ _For example, if the `example.com` scope is bound to the IdP named `http://idp.e
 
 The required identifier types above are opaque, unknown to users in most cases, and unsuitable for display.
 
-SPs requiring the display of identifiers to users, the identification of other users via searching, selection, etc., and similar use cases SHOULD rely on additional suitable SAML Attributes such as:
+SPs requiring the display of identifiers to users, the identification of other users via searching, selection, etc., and similar use cases SHOULD rely on additional suitable SAML Attributes such as (<<X500SAMLattr>>):
 
 * `urn:oid:0.9.2342.19200300.100.1.3` (mail)
 * `urn:oid:2.16.840.1.113730.3.1.241` (displayName)
