--- a/edit/fedinterop/main.adoc
+++ b/edit/fedinterop/main.adoc
@@ -4,13 +4,21 @@
 :toc-placement: preamble
 :docinfo:
 :notitle:
+:nofooter:
 
 // did not manage to CSS-select the top-level title: instead using :notitle: plus following pass-though
 ++++
 <h1 style="color: blue; text-align: center; font-size: 150%; margin-bottom: 2em; font-weight: bold;">
-  SAML V2.0 Implementation Profile for Federation Interoperability Version 1.0
+  SAML V2.0 Implementation Profile for Federation Interoperability Version
 </h1>
 ++++
+
+[horizontal]
+Version:: 1.0
+Date:: 2018-03-08
+Status:: Group-Approved Draft
+
+include::contributors.adoc[]
 
 .Abstract
 This document encompasses a set of software conformance requirements intended to facilitate interoperability within the context of full mesh identity federations, such as those found in the research and education sector. It attempts to address a number of common barriers to interoperability and details features that are necessary in order to use SAML metadata as a foundation for scalable trust fabrics. It supercedes the link:eGovImplProfile.html[eGovernment Implementation Profile V2.0bis] from June 2011.
@@ -18,6 +26,8 @@ This document encompasses a set of software conformance requirements intended to
 .Copyright Notice
 SAML v2.0 Implementation Profile for Federation Interoperability ©2017 Internet2 and/or the respective contributors, used under license.  All rights reserved.
 
+.IPR
+This work is licensed under the https://creativecommons.org/licenses/by-sa/3.0/us/[Creative Commons Attribution-ShareAlike 3.0] United States License.
 
 == Introduction
 The material contained herein is intended for use by implementers of SAML software. It does not specify a fixed set of behaviors for all deployments or limit in any way the features that can be provided in a given implementation, but rather serves as a complement to deployment profiles by identifying a standard set of software capabilities necessary for scalable federation. This profile can form the basis for testing frameworks capable of providing for the validation of conformant software packages.
@@ -41,5 +51,3 @@ include::sp.adoc[]
 include::idp.adoc[]
 
 include::references.adoc[]
-
-include::contributors.adoc[]
