--- a/edit/saml2int/main.adoc
+++ b/edit/saml2int/main.adoc
@@ -13,7 +13,7 @@ SAML V2.0 Interoperability Deployment Profile V1.0 (Draft)
 ++++
 
 [horizontal]
-Version:: 0.x
+Version:: 0.01
 Date:: 2018-03-08
 Status:: In Progress
 
