--- a/edit/fedinterop/main.adoc
+++ b/edit/fedinterop/main.adoc
@@ -9,7 +9,7 @@
 // did not manage to CSS-select the top-level title: instead using :notitle: plus following pass-though
 ++++
 <h1 style="color: blue; text-align: center; font-size: 150%; margin-bottom: 2em; font-weight: bold;">
-  SAML V2.0 Implementation Profile for Federation Interoperability Version
+  SAML V2.0 Implementation Profile for Federation Interoperability
 </h1>
 ++++
 
@@ -26,8 +26,8 @@ This document encompasses a set of software conformance requirements intended to
 .Copyright Notice
 SAML v2.0 Implementation Profile for Federation Interoperability ©2017 Internet2 and/or the respective contributors, used under license.  All rights reserved.
 
-.IPR
-This work is licensed under the https://creativecommons.org/licenses/by-sa/3.0/us/[Creative Commons Attribution-ShareAlike 3.0] United States License.
+.License
+This work is licensed under the https://creativecommons.org/licenses/by-sa/3.0/us/[Creative Commons Attribution-ShareAlike 3.0 United States License].
 
 == Introduction
 The material contained herein is intended for use by implementers of SAML software. It does not specify a fixed set of behaviors for all deployments or limit in any way the features that can be provided in a given implementation, but rather serves as a complement to deployment profiles by identifying a standard set of software capabilities necessary for scalable federation. This profile can form the basis for testing frameworks capable of providing for the validation of conformant software packages.
