--- a/edit/saml2int/contributors.adoc
+++ b/edit/saml2int/contributors.adoc
@@ -10,7 +10,7 @@
 * Bob Morgan, rlmorgan@washington.edu 
 * Keith Wessel, kwessel@illinois.edu
 * Eric Goodman, eric.goodman@ucop.edu
-* Andrew Morgan, morgan@orst.edu
+* Andrew Morgan, morgan@oregonstate.edu
 * Judith Bush, bushj@oclc.org
 * Thomas Lenggenhager, lenggenhager@switch.ch
 * Alex Stuart, alex.stuart@jisc.ac.uk
